force-app/main/default/objects/Contact/fields/IBM_ID_Blue_ID__c.field-meta.xml
<CustomField>
    <fullName>IBM_ID_Blue_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IBM ID BLUE ID</label>
    <length>23</length>
    <type>Text</type>
</CustomField>