force-app/main/default/objects/Contact/fields/SGUID__c.field-meta.xml
<CustomField>
    <fullName>SGUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SGUID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>