force-app/main/default/objects/Contact/validationRules/AAA_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>AAA_validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR (ISNULL(Account.Name), ISNULL(Id))</errorConditionFormula>
    <errorMessage>Account name cannot be null or Id cannot be null</errorMessage>
</ValidationRule>